tests/NormalTests/paczka1/small_fuzzy/27181513.err
Error in line 4: F26Ia A767 68,7
Error in line 5: F26Ia S158 61,0
